# better_embedded

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: check.rs  lib.rs
src/strategies/: common.rs  md5.rs  mod.rs  random.rs
