[package]
name = "better_embedded"
version = "0.3.1"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "Embed files and release them at runtime"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/better_embedded"
documentation = "https://docs.rs/better_embedded/"
categories = ["config"]
keywords = ["embedded", "release"]

include = [
    "/Cargo.toml",
    "/src",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/CHANGELOG.md"
]

[dependencies]
log = { version = "~0.4", optional = true }
rand = { version = "~0.8", optional = true }
md-5 = { version = "~0.10", optional = true }

[features]
default = ["log", "md5"]

log = ["dep:log"]
random = ["dep:rand"]
md5 = ["dep:md-5"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
